--- a/index.html
+++ b/index.html
@@ -332,22 +332,28 @@ span.wave {
 </section>
 <hr>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
-<p <h3><strong>&#9998;</strong>Daftar Harga Mobil Rental</h3></p>
+<h3>Daftar Rental Mobil Jogja</h3>
 <ul class="staff-list">
-	
-		<li class="staff">
-			<div class="staff-details">
-				<ul class="staff-info">
-					<li>All New Avanza Automatic</li>
-					<li><small><p style="color:red">300k / hari (Lepas Kunci)</p></small></li>
-				</ul>
-			</div>
+<li class="staff">
+<div class="staff-details">
+<ul class="staff-info">
+                <li><h3>All New Avanza Automatic</h3></li>
+<li><p style="color:red">300k / hari (Lepas Kunci)</p></li>
+</ul>
+</div>
 
-			<div class="staff-bio">
-				<p><blockquote>
+
+<div class="staff-bio">
+<p><blockquote>
   <p><img src="/uploads/veloz.jpg" alt="" width="650" height="450" /></p>
 </blockquote>
+
+
+</p><h4 id="harga-sewa">HARGA SEWA</h4>
+
+
 <h4 id="lepas-kunci">LEPAS KUNCI</h4>
+
 
 <ul>
   <li>
@@ -358,7 +364,9 @@ span.wave {
   </li>
 </ul>
 
+
 <h4 id="mobil--driver">Mobil + Driver</h4>
+
 
 <ul>
   <li>
@@ -369,7 +377,9 @@ span.wave {
   </li>
 </ul>
 
+
 <h4 id="mobil--driver--bbm">Mobil + Driver + BBM</h4>
+
 
 <ul>
   <li>
@@ -379,19 +389,27 @@ span.wave {
     <h4 id="per-hari-550-ribu">Per Hari 525 ribu</h4>
   </li>
 </ul>
-			</div>
-		</li>
-	<li class="staff">
-			<div class="staff-details">
-				<ul class="staff-info">
-					<li>All New Avanza Manual</li>
-					<li><small><p style="color:red">275K / hari (Lepas Kunci)</p></small></li>
-				</ul>
-			</div>
+<p></p>
+</div>
+</li>
+<li class="staff">
+<div class="staff-details">
+<ul class="staff-info">
+<li><h3>All New Avanza Manual</h3></li>
+<li><p style="color:red">275K / hari (Lepas Kunci)</p></li>
+</ul>
+</div>
 
-			<div class="staff-bio">
-				<p></p><p><img src="/uploads/avanza-manual.jpg" alt="" width="650" height="450" /></p>
-<h4 id="lepas-kunci--">LEPAS KUNCI    </h4>
+
+<div class="staff-bio">
+<p></p><p><img src="/uploads/avanza-manual.jpg" alt="" width="650" height="450" /></p>
+
+
+<h4 id="harga-sewa--"><br />HARGA SEWA    </h4>
+
+
+<h4 id="lepas-kunci--">LEPAS KUNCI</h4>
+
 
 <ul>
   <li>
@@ -402,7 +420,9 @@ span.wave {
   </li>
 </ul>
 
+
 <h4 id="mobil--driver--">Mobil + Driver    </h4>
+
 
 <ul>
   <li>
@@ -413,7 +433,9 @@ span.wave {
   </li>
 </ul>
 
+
 <h4 id="mobil--driver--bbm--">Mobil + Driver + BBM    </h4>
+
 
 <ul>
   <li>
@@ -424,20 +446,26 @@ span.wave {
   </li>
 </ul>
 <p></p>
-			</div>
-		</li>
-		
-	    <li class="staff">
-			<div class="staff-details">
-				<ul class="staff-info">
-					<li>Honda Brio Manual</li>
-					<li><small><p style="color:red">275k / hari (Lepas Kunci)</p></small></li>
-				</ul>
-			</div>
+</div>
+</li>
+    <li class="staff">
+<div class="staff-details">
+<ul class="staff-info">
+<li><h3>Honda Brio Manual</h3></li>
+<li><p style="color:red">275k / hari (Lepas Kunci)</p></li>
+</ul>
+</div>
 
-			<div class="staff-bio">
-				<p></p><p><img src="/uploads/brio-manual.jpg" alt="" width="650" height="450" /></p>
+
+<div class="staff-bio">
+<p></p><p><img src="/uploads/brio-manual.jpg" alt="" width="650" height="450" /></p>
+
+
+<h4 id="harga-sewa">HARGA SEWA</h4>
+
+
 <h4 id="lepas-kunci">LEPAS KUNCI</h4>
+
 
 <ul>
   <li>
@@ -448,7 +476,9 @@ span.wave {
   </li>
 </ul>
 
+
 <h4 id="mobil--driver">Mobil + Driver</h4>
+
 
 <ul>
   <li>
@@ -459,7 +489,9 @@ span.wave {
   </li>
 </ul>
 
+
 <h4 id="mobil--driver--bbm">Mobil + Driver + BBM</h4>
+
 
 <ul>
   <li>
@@ -470,20 +502,26 @@ span.wave {
   </li>
 </ul>
 <p></p>
-			</div>
-		</li>
-	    <li class="staff">
-			<div class="staff-details">
-				<ul class="staff-info">
-					<li>Honda Brio Matic</li>
-					<li><small><p style="color:red">300K / hari (Lepas Kunci)</p></small.</li>
-				</ul>
-			</div>
+</div>
+</li>
+    <li class="staff">
+<div class="staff-details">
+<ul class="staff-info">
+<li><h3>Honda Brio Matic</h3></li>
+<li><p style="color:red">300K / hari (Lepas Kunci)</p></li>
+</ul>
+</div>
 
-			<div class="staff-bio">
-				<p></p><p><img src="/uploads/brio.jpg" alt="" width="650" height="450" /></p>
+
+<div class="staff-bio">
+<p></p><p><img src="/uploads/brio.jpg" alt="" width="650" height="450" /></p>
+
+
+<h4 id="harga-sewa">HARGA SEWA</h4>
+
 
 <h4 id="lepas-kunci--">LEPAS KUNCI    </h4>
+
 
 <ul>
   <li>
@@ -494,21 +532,24 @@ span.wave {
   </li>
 </ul>
 <p></p>
-			</div>
-		</li>
-	    <li class="staff">
-			<div class="staff-details">
-				<ul class="staff-info">
-					<li>Nissan March</li>
-					<li><small><p style="color:red">275k / hari (Lepas Kunci)</p></small></li>
-				</ul>
-			</div>
-
-			<div class="staff-bio">
-				<p>
+</div>
+</li>
+    <li class="staff">
+<div class="staff-details">
+<ul class="staff-info">
+<li><h3>Nissan March</h3></li>
+<li><p style="color:red">275k / hari (Lepas Kunci)</p></li>
+</ul>
+</div>
 
 
- <h4 id="lepas-kunci">LEPAS KUNCI</h4>
+<div class="staff-bio">
+<p><blockquote>
+  <h4 id="harga-sewa">HARGA SEWA</h4>
+
+
+  <h4 id="lepas-kunci">LEPAS KUNCI</h4>
+
 
   <ul>
     <li>
@@ -519,25 +560,32 @@ span.wave {
     </li>
   </ul>
 
-  <p><img src="/uploads/march.jpg" alt="" width="650" height="450" /></p>
- </li>
-</ul>
-<p></p>
-			</div>
-		</li>
-	<li class="staff">
-			<div class="staff-details">
-				<ul class="staff-info">
-					<li>Toyota Agya</li>
-					<li><small><p style="color:red">250k / hari (Lepas Kunci)</p></small></li>
-				</ul>
-			</div>
 
-			<div class="staff-bio">
-				<p><blockquote>
+  <p><img src="/uploads/march.jpg" alt="" width="650" height="450" /></p>
+</blockquote>
+</p>
+</div>
+</li>
+                <li class="staff">
+<div class="staff-details">
+<ul class="staff-info">
+<li><h3>Toyota Agya</h3></li>
+<li><p style="color:red">250k / hari (Lepas Kunci)</p></li>
+</ul>
+</div>
+
+
+<div class="staff-bio">
+<p><blockquote>
   <p><img src="/uploads/agya.jpg" alt="" width="300" height="225" /></p>
 </blockquote>
+
+
+</p><h4 id="harga-sewa">HARGA SEWA</h4>
+
+
 <h4 id="lepas-kunci">LEPAS KUNCI</h4>
+
 
 <ul>
   <li>
@@ -548,7 +596,9 @@ span.wave {
   </li>
 </ul>
 
+
 <h4 id="mobil--driver">Mobil + Driver</h4>
+
 
 <ul>
   <li>
@@ -559,7 +609,9 @@ span.wave {
   </li>
 </ul>
 
+
 <h4 id="mobil--driver--bbm">Mobil + Driver + BBM</h4>
+
 
 <ul>
   <li>
@@ -570,21 +622,28 @@ span.wave {
   </li>
 </ul>
 <p></p>
-			</div>
-		</li>
+</div>
+</li>
                 <li class="staff">
-			<div class="staff-details">
-				<ul class="staff-info">
-					<li>Toyota Calya</li>
-					<li><small><p style="color:red">300K / hari (Lepas Kunci)</p></small></li>
-				</ul>
-			</div>
+<div class="staff-details">
+<ul class="staff-info">
+<li><h3>Toyota Calya</h3></li>
+<li><p style="color:red">300k / hari (Lepas Kunci)</p></li>
+</ul>
+</div>
 
-			<div class="staff-bio">
-				<p><blockquote>
+
+<div class="staff-bio">
+<p><blockquote>
   <p><img src="/uploads/calya.jpg" alt="" width="300" height="225" /></p>
 </blockquote>
+
+
+</p><h4 id="harga-sewa">HARGA SEWA</h4>
+
+
 <h4 id="lepas-kunci">LEPAS KUNCI</h4>
+
 
 <ul>
   <li>
@@ -595,7 +654,9 @@ span.wave {
   </li>
 </ul>
 
+
 <h4 id="mobil--driver">Mobil + Driver</h4>
+
 
 <ul>
   <li>
@@ -606,7 +667,9 @@ span.wave {
   </li>
 </ul>
 
+
 <h4 id="mobil--driver--bbm">Mobil + Driver + BBM</h4>
+
 
 <ul>
   <li>
@@ -614,17 +677,13 @@ span.wave {
   </li>
   <li>
     <h4 id="per-hari-500-ribu">Per Hari 475 ribu</h4>
-	</li>
+  </li>
 </ul>
-<p></p>
-			</div>
-		</li>
- 
 <li class="staff">
 			<div class="staff-details">
 				<ul class="staff-info">
-					<li>Grand Max PU Box</li>
-					<li><small><p style="color:red">250k / hari (Lepas Kunci)</p></small></li>
+					<li><h3>Grand Max PU Box</h3></li>
+					<li><p style="color:red">250k / hari (Lepas Kunci)</p></li>
 				</ul>
 			</div>
 
@@ -632,6 +691,9 @@ span.wave {
 				<p><blockquote>
   <p><img src="/uploads/content-5b0bed6990b95.jpg" alt="" width="800" height="600" /></p>
 </blockquote>
+
+</p><h4 id="harga-sewa">HARGA SEWA</h4>
+
 <h4 id="lepas-kunci">LEPAS KUNCI</h4>
 
 <ul>
@@ -667,6 +729,13 @@ span.wave {
 <p></p>
 			</div>
 		</li>
+</ul>
+</div>
+</li>
+</ul>
+<p></p>
+</div>
+</li>
 </ul>
 </article>
 <!DOCTYPE html>
