--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@ span.wave {
 
 			<div class="staff-bio">
 				<p><blockquote>
-  <p><img src="/uploads/content-5b0bed6990b95.jpg" alt="" width="800" height="600" /></p>
+  <p><img src="/uploads/content-5b0bed6990b95.webp" alt="" width="800" height="600" /></p>
 </blockquote>
 
 </p>
