--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ span.wave {
 
 <div class="staff-bio">
 <p><blockquote>
-  <p><img src="/uploads/veloz.jpg" alt="" width="650" height="450" /></p>
+  <p><img src="/uploads/m1.jpg" alt="" width="650" height="450" /></p>
 </blockquote>
 
 
@@ -402,7 +402,7 @@ span.wave {
 
 
 <div class="staff-bio">
-<p></p><p><img src="/uploads/avanza-manual.jpg" alt="" width="650" height="450" /></p>
+<p></p><p><img src="/uploads/m3.jpg" alt="" width="650" height="450" /></p>
 
 
 
