--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@ span.wave {
 </body>
 </html>
 <div class="iframe-container">
-<iframe width="320" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=320&height=300&hl=en&q=Bening%20Abadi%20Sleman+(Bening%20Abadi)&t=&z=12&ie=UTF8&iwloc=B&output=embed"></iframe> <p align="center"><a href='http://www.mapsiframe.net/'>Lokasi Bening Abadi Transport & Guest House</a></p>
+<iframe width="320" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=320&height=300&hl=en&q=Bening%20Abadi%20Sleman+(Bening%20Abadi)&t=&z=12&ie=UTF8&iwloc=B&output=embed"></iframe> <p align="center">Lokasi Bening Abadi Transport & Guest House</p>
 </div>
 
 <style>
