--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="id-ID">
 	<head>
+<script src="https://www.googleoptimize.com/optimize.js?id=OPT-TG8TR64"></script>
 <meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
         <!-- Begin Jekyll SEO tag v2.6.1 -->
