--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="id-ID">
 	<head>
 <script src="https://www.googleoptimize.com/optimize.js?id=OPT-TG8TR64"></script>
+	<!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-131533286-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-131533286-1');
+</script>	
 <meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
         <!-- Begin Jekyll SEO tag v2.6.1 -->
