--- a/index.html
+++ b/index.html
@@ -332,6 +332,7 @@ Sejak tahun 2010 Bening Abadi Transport telah berkecimpung di bidang transportas
 
 </div>
 </section>
+<article class="content" data-cms-content-wrapper="/_layouts/page.html">
 <div class="testimonials">
 <blockquote class="testimonial">
 			<p class="testimonial-message"><a href="/rental-mobil" title="Rental Mobil Yogya"><h6>Sewa mobil lepas kunci mulai 250 ribu perhari!!</h6></a></p><p><img alt="mobil" src="/uploads/m14.webp" width="260" height="139"></p>
@@ -340,6 +341,7 @@ Sejak tahun 2010 Bening Abadi Transport telah berkecimpung di bidang transportas
 			<p class="testimonial-message"><a href="/penginapan" title="Penginapan Yogya"><small>Nginep nyaman semaleman cuma 150 ribu!!&emsp;&emsp;</small></a></p><p><img alt="kamar" src="/uploads/kamar-icon1.webp" width="260" height="139"></p>
 		</blockquote>             
 </div>
+</article>
 <hr>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
 <h3>Daftar Rental Mobil Jogja</h3>
