--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ span.wave {
 	</div>
 <h4 style="text-align:center;"><q>Rental Motor Mulai <span class="stabilo">60rb/Hari</span> | Sewa Mobil Mulai <span class="stabilo">250rb/Hari</span> | Penginapan Mulai <span class="stabilo">150rb/Hari</span></q><br><hr><q><span class="stabilo">Telp. 0274-583197 &amp; 0274-547440 Untuk informasi lebih lanjut dan booking.</span></q></h4><hr>
 
-<p style="text-align:center;">Sejak tahun 2010 Bening Abadi Transport telah berkecimpung di bidang transportasi dan penginapan murah di Yogyakarta, dengan lokasi yang strategis berdekatan dengan kampus terkenal seperti UGM dan UNY Jogja. Sewa motor, rental mobil, penginapan dan guest house adalah layanan utama kami di kota jogja. Untuk guest house kamar yang kami tawarkan juga bisa anda booking melalui aplikasi Traveloka dengan harga yang lebih murah dan terjangkau untuk mahasiswa dan pelajar yogya. Semoga ke depan kami bisa memberikan pelayanan yang lebih baik kepada pelanggan pelanggan setia Bening Abadi Transport.</p><hr>
+<p style="text-align:center;">Sejak tahun 2010 Bening Abadi Transport telah berkecimpung di bidang transportasi dan penginapan murah di Yogyakarta.</p><hr>
 
 
 </div>
