--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 <meta name="twitter:creator" content="@beningabad1" />
 <meta name="twitter:title" content="Bening Abadi Transport" />
 <meta name="twitter:description" content="Rental Motor, Sewa Mobil Jogja dan Penginapan Yogyakarta" />
-<meta name="twitter:image" content="http://beningabaditransport.com/uploads/logo-bening.png" />
+<meta name="twitter:image" content="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/logo-bening.png" />
 <link rel="canonical" href="https://beningabaditransport.com" />
 <meta property="og:url" content="https://beningabaditransport.com/" />
 <script type="application/ld+json">
-{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://beningabaditransport.com/siteicon.png"}},"@type":"WebSite","headline":"Sewa Motor, Rental Mobil, Penginapan","url":"https://beningabaditransport.com/","description":"Sewa Motor Jogja Rental Mobil Yogyakarta Penginapan Murah Lokasi UGM UNY Harga Mahasiswa Pelajar Umum Murah Terjangkau","@context":"https://schema.org"}</script>
+{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/siteicon.png"}},"@type":"WebSite","headline":"Sewa Motor, Rental Mobil, Penginapan","url":"https://beningabaditransport.com/","description":"Sewa Motor Jogja Rental Mobil Yogyakarta Penginapan Murah Lokasi UGM UNY Harga Mahasiswa Pelajar Umum Murah Terjangkau","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <style>
 html { font-size: 11px; -webkit-tap-highlight-color: transparent; }
@@ -419,10 +419,10 @@ span.wave {
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
 <div class="testimonials">
 <blockquote class="testimonial">
-			<p class="testimonial-message"><a href="/rental-mobil" title="Rental Mobil Yogya"><small>Sewa mobil lepas kunci mulai 250 ribu perhari!!</small></a></p><p><img alt="mobil" src="/uploads/m14.webp" width="260" height="139"></p>
+			<p class="testimonial-message"><a href="/rental-mobil" title="Rental Mobil Yogya"><small>Sewa mobil lepas kunci mulai 250 ribu perhari!!</small></a></p><p><img alt="mobil" src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m14.webp" width="260" height="139"></p>
 		</blockquote>
 <blockquote class="testimonial">
-			<p class="testimonial-message"><a href="/penginapan" title="Penginapan Yogya"><small>Nginep nyaman semaleman di Jogja cuma 150 ribu!!&emsp;&emsp;</small></a></p><p><img alt="kamar" src="/uploads/kamar-icon1.webp" width="260" height="139"></p>
+			<p class="testimonial-message"><a href="/penginapan" title="Penginapan Yogya"><small>Nginep nyaman semaleman di Jogja cuma 150 ribu!!&emsp;&emsp;</small></a></p><p><img alt="kamar" src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/kamar-icon1.webp" width="260" height="139"></p>
 		</blockquote>             
 </div>
 </article>
@@ -441,7 +441,7 @@ span.wave {
 
 <div class="staff-bio">
 <p><blockquote>
-  <p><img src="/uploads/m1.webp" alt="" width="650" height="450" /></p>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m1.webp" alt="" width="650" height="450" /></p>
 </blockquote>
 
 
@@ -498,7 +498,7 @@ span.wave {
 
 
 <div class="staff-bio">
-<p></p><p><img src="/uploads/m3.webp" alt="" width="650" height="450" /></p>
+<p></p><p><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m3.webp" alt="" width="650" height="450" /></p>
 
 
 
@@ -552,7 +552,7 @@ span.wave {
 
 
 <div class="staff-bio">
-<p></p><p><img src="/uploads/brio-manual.jpg" alt="" width="650" height="450" /></p>
+<p></p><p><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/brio-manual.jpg" alt="" width="650" height="450" /></p>
 
 <h4 id="lepas-kunci">LEPAS KUNCI</h4>
 
@@ -604,7 +604,7 @@ span.wave {
 
 
 <div class="staff-bio">
-<p></p><p><img src="/uploads/brio.jpg" alt="" width="650" height="450" /></p>
+<p></p><p><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/brio.jpg" alt="" width="650" height="450" /></p>
 
 
 <h4 id="lepas-kunci--">LEPAS KUNCI    </h4>
@@ -647,7 +647,7 @@ span.wave {
   </ul>
 
 
-  <p><img src="/uploads/march.jpg" alt="" width="650" height="450" /></p>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/march.jpg" alt="" width="650" height="450" /></p>
 </blockquote>
 </p>
 </div>
@@ -663,7 +663,7 @@ span.wave {
 
 <div class="staff-bio">
 <p><blockquote>
-  <p><img src="/uploads/agya.jpg" alt="" width="300" height="225" /></p>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/agya.jpg" alt="" width="300" height="225" /></p>
 </blockquote>
 
 
@@ -721,7 +721,7 @@ span.wave {
 
 <div class="staff-bio">
 <p><blockquote>
-  <p><img src="/uploads/calya.jpg" alt="" width="300" height="225" /></p>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/calya.jpg" alt="" width="300" height="225" /></p>
 </blockquote>
 
 
@@ -775,7 +775,7 @@ span.wave {
 
 			<div class="staff-bio">
 				<p><blockquote>
-  <p><img src="/uploads/content-5b0bed6990b95.webp" alt="" width="800" height="600" /></p>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/content-5b0bed6990b95.webp" alt="" width="800" height="600" /></p>
 </blockquote>
 
 </p>
@@ -880,34 +880,34 @@ span.wave {
 <!-- Swiper -->
   <div class="swiper-container">
     <div class="swiper-wrapper">
-     <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s1.webp"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s2.webp"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s3.webp"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s4.webp"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s5.webp"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s6.webp"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k1.webp"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k13.webp"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k3.webp"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k4.webp"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k5.webp"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k6.webp"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k7.webp"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k8.webp"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k9.webp"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k10.webp"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k11.webp"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k12.webp"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m1.webp"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m2.webp"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m3.webp"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m4.webp"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m5.webp"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m6.webp"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m7.webp"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m8.webp"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m9.webp"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m10.webp"></div>
+     <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s1.webp"></div>
+      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s2.webp"></div>
+      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s3.webp"></div>
+      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s4.webp"></div>
+      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s5.webp"></div>
+      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s6.webp"></div>
+      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k1.webp"></div>
+      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k13.webp"></div>
+      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k3.webp"></div>
+      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k4.webp"></div>
+      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k5.webp"></div>
+      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k6.webp"></div>
+      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k7.webp"></div>
+      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k8.webp"></div>
+      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k9.webp"></div>
+      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k10.webp"></div>
+      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k11.webp"></div>
+      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k12.webp"></div>
+      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m1.webp"></div>
+      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m2.webp"></div>
+      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m3.webp"></div>
+      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m4.webp"></div>
+      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m5.webp"></div>
+      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m6.webp"></div>
+      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m7.webp"></div>
+      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m8.webp"></div>
+      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m9.webp"></div>
+      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m10.webp"></div>
 	  </div>
 </div>
    <!-- Add Pagination -->
