--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <meta property="og:site_name" content="Bening Abadi Transport Website" /> 
 <meta property="og:description" content="Rental Motor Sewa Mobil Jogja Penginapan Murah Yogyakarta Lokasi UGM UNY Harga Mahasiswa Pelajar Umum Murah Terjangkau" />
 <meta property="og:type" content="website" />
-<meta property="og:image" content="http://beningabaditransport.com/uploads/logo-bening.png" />
-<meta property="og:image:secure_url" content="https://beningabaditransport.com/uploads/logo-bening.png" />
+<meta property="og:image" content="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/logo-bening.png" />
+<meta property="og:image:secure_url" content="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/logo-bening.png" />
 <meta property="og:image:type" content="image/png" />
 <meta property="og:image:width" content="400" />
 <meta property="og:image:height" content="300" />
@@ -37,7 +37,7 @@
 <link rel="canonical" href="https://beningabaditransport.com" />
 <meta property="og:url" content="https://beningabaditransport.com/" />
 <script type="application/ld+json">
-{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/siteicon.png"}},"@type":"WebSite","headline":"Sewa Motor, Rental Mobil, Penginapan","url":"https://beningabaditransport.com/","description":"Sewa Motor Jogja Rental Mobil Yogyakarta Penginapan Murah Lokasi UGM UNY Harga Mahasiswa Pelajar Umum Murah Terjangkau","@context":"https://schema.org"}</script>
+{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/siteicon.png"}},"@type":"WebSite","headline":"Sewa Motor, Rental Mobil, Penginapan","url":"https://beningabaditransport.com/","description":"Sewa Motor Jogja Rental Mobil Yogyakarta Penginapan Murah Lokasi UGM UNY Harga Mahasiswa Pelajar Umum Murah Terjangkau","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <style>
 html { font-size: 11px; -webkit-tap-highlight-color: transparent; }
@@ -825,112 +825,266 @@ span.wave {
 </ul>
 </article>
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
+<html>
 <meta charset="utf-8">
-  
-<link rel="preload" as="style" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-<link rel="preload" as="script" href="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-<!-- Demo styles -->
-  <style>
-    html,
-    body {
-      position: relative;
-      height: 50%;
-    }
+<head>
+<title>BASlide</title>
+<style>
+* {
+	padding: 0;
+	margin: 0;
+}
+img {
+	max-width: 100%;
+	height: auto;
+}
+ul,ol {
+	list-style-type: none;
+}
+/* end css reset */
 
-    body {
-      background: #eee;
-      font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-      font-size: 14px;
-      color: #000;
-      margin: 0;
-      padding: 0;
-    }
+.containerz {	/* posisikan letak slidernya */
+	margin: 5% auto;
+	position: relative;
+	overflow: hidden;
+}
+.containerz, ul.slide li img{
+	width: 320px; /* Sesuaikan sendiri */
+	height: 240px;  /* Sesuaikan sendiri */
+}
 
-    .swiper-container {
-      width: 330px;
-      height: 240px;
-    }
 
-    .swiper-slide {
-      text-align: center;
-      font-size: 18px;
-      background: #fff;
+ul.slide {
+	position: absolute;
+	display: block;
+	width: 800%;  /* <-- Angka 3 Bergantung pada jumlah slide */
+}
 
-      /* Center slide text vertically */
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: -webkit-flex;
-      display: flex;
-      -webkit-box-pack: center;
-      -ms-flex-pack: center;
-      -webkit-justify-content: center;
-      justify-content: center;
-      -webkit-box-align: center;
-      -ms-flex-align: center;
-      -webkit-align-items: center;
-      align-items: center;
-    }
-  </style>
+.caption {	/* styling untuk deskripsi setiap slide */
+	position: absolute;
+	background-color: rgba(0,0,0,0.5);
+	bottom:0;
+	padding:1px;
+	color:#fff;
+	left: 0;
+	right: 0;
+}
+
+/* Yang membuatnya jadi slider */
+	ul.slide li {
+  		display: inline-block;
+  		float: left;
+  		-webkit-box-sizing:border-box;
+  		-moz-box-sizing:border-box;
+  		ox-sizing:border-box;
+  		-webkit-transition: -webkit-transform 2000ms;
+  		-moz-transition: -moz-transform 2000ms;
+  		transition: -webkit-transform 2000ms, transform 2000ms;
+	}
+	ul.slide li.slide-1 {
+		left: 0%;
+	}
+	ul.slide li.slide-2 {
+		left: 100%;
+	}
+	ul.slide li.slide-3 {
+		left: 200%;
+	}
+	ul.slide li.slide-4 {
+		left: 300%;
+	}
+        ul.slide li.slide-5 {
+		left: 400%;
+	}
+        ul.slide li.slide-6 {
+		left: 500%;
+	}
+	ul.slide li.slide-7 {
+		left: 600%;
+	}
+        ul.slide li.slide-8 {
+		left: 700%;
+	}
+
+        #nav-1:checked ~ ul.slide li{
+	  	-webkit-transform: translateX(0%);
+		-moz-transform: translateX(0%);
+	  	transform: translateX(0%);
+	}
+	#nav-2:checked ~ ul.slide li{
+	  	-webkit-transform: translateX(-100%);
+	  	-moz-transform: translateX(-100%);
+	 	transform: translateX(-100%);
+	}
+	#nav-3:checked ~ ul.slide li {
+	  	-webkit-transform: translateX(-200%);
+	  	-moz-transform: translateX(-200%);
+	  	transform: translateX(-200%);
+	}
+        #nav-4:checked ~ ul.slide li {
+	  	-webkit-transform: translateX(-300%);
+	  	-moz-transform: translateX(-300%);
+	  	transform: translateX(-300%);
+	}
+	#nav-5:checked ~ ul.slide li {
+	  	-webkit-transform: translateX(-400%);
+	  	-moz-transform: translateX(-400%);
+	  	transform: translateX(-400%);
+	}
+	#nav-6:checked ~ ul.slide li {
+	  	-webkit-transform: translateX(-500%);
+	  	-moz-transform: translateX(-500%);
+	  	transform: translateX(-500%);
+	}
+	#nav-7:checked ~ ul.slide li {
+	  	-webkit-transform: translateX(-600%);
+	  	-moz-transform: translateX(-600%);
+	  	transform: translateX(-600%);
+	}
+	#nav-8:checked ~ ul.slide li {
+	  	-webkit-transform: translateX(-700%);
+	  	-moz-transform: translateX(-700%);
+	  	transform: translateX(-700%);
+	}
+/* End, yang membuatnya jadi slider */
+
+
+/* Navigator */
+
+.radio-nav { /* menghilangkan radio button */
+	display: none;
+}
+	
+	/* styling untuk tombol next dan previous slide */
+	.nav-arrow {
+		position: absolute;
+		top:45%;
+		width:50px;
+		height: 50px;
+	}
+	.nav-next {
+		right:10px;
+	}
+	.nav-prev {
+		left:10px;
+	}
+	.nav-arrow label {
+		-webkit-transition:all 0.3s;
+		-moz-transition:all 0.3s;
+		transition:all 0.3s;
+		background-color: rgba(0,0,0,0.3);
+		color: #fff;
+		border-radius: 50%;
+		display: block;
+		position: absolute;
+		padding:15px 20px;
+		cursor: pointer;
+		z-index: 1;
+		opacity: 0;
+		font-weight: bold;
+		line-height: 1;
+	}
+	.containerz:hover .nav-arrow label{
+		background-color: rgba(0,0,0,0.7);
+	}
+	/* end styling untuk tombol next dan previous slide */
+	/*Setiap slide mempunya tombol prev dan next-nya masing-masing. Nah, tampilkan tombol yang tepat dengan kode dibawah ini*/ 
+	#nav-1:checked ~ .nav-prev label.nav-8,
+	#nav-1:checked ~ .nav-next label.nav-2,
+	#nav-2:checked ~ .nav-prev label.nav-1,
+	#nav-2:checked ~ .nav-next label.nav-3,
+	#nav-3:checked ~ .nav-prev label.nav-2,
+	#nav-3:checked ~ .nav-next label.nav-4, 
+	#nav-4:checked ~ .nav-prev label.nav-3,
+	#nav-4:checked ~ .nav-next label.nav-5,
+	#nav-5:checked ~ .nav-prev label.nav-4,
+	#nav-5:checked ~ .nav-next label.nav-6,
+	#nav-6:checked ~ .nav-prev label.nav-7,
+	#nav-6:checked ~ .nav-next label.nav-5,
+	#nav-7:checked ~ .nav-prev label.nav-8,
+	#nav-7:checked ~ .nav-next label.nav-6,
+	#nav-8:checked ~ .nav-prev label.nav-7,
+	#nav-8:checked ~ .nav-next label.nav-1 {
+		z-index: 2;
+		opacity: 1;
+	}
+	/* end */
+
+/* Navigator */
+</style>
 </head>
 <body>
-<!-- Swiper -->
-  <div class="swiper-container">
-    <div class="swiper-wrapper">
-     <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s1.webp"></div>
-      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s2.webp"></div>
-      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s3.webp"></div>
-      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s4.webp"></div>
-      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s5.webp"></div>
-      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s6.webp"></div>
-      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k1.webp"></div>
-      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k13.webp"></div>
-      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k3.webp"></div>
-      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k4.webp"></div>
-      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k5.webp"></div>
-      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k6.webp"></div>
-      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k7.webp"></div>
-      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k8.webp"></div>
-      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k9.webp"></div>
-      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k10.webp"></div>
-      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k11.webp"></div>
-      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k12.webp"></div>
-      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m1.webp"></div>
-      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m2.webp"></div>
-      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m3.webp"></div>
-      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m4.webp"></div>
-      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m5.webp"></div>
-      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m6.webp"></div>
-      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m7.webp"></div>
-      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m8.webp"></div>
-      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m9.webp"></div>
-      <div class="swiper-slide"><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m10.webp"></div>
-	  </div>
+
+<div class="containerz">
+	<input type="radio" name="slide" class="radio-nav" id="nav-1" checked/>
+	<input type="radio" name="slide" class="radio-nav" id="nav-2"/>
+	<input type="radio" name="slide" class="radio-nav" id="nav-3"/>
+        <input type="radio" name="slide" class="radio-nav" id="nav-4"/>
+	<input type="radio" name="slide" class="radio-nav" id="nav-5"/>
+	<input type="radio" name="slide" class="radio-nav" id="nav-6"/>
+	<input type="radio" name="slide" class="radio-nav" id="nav-7"/>
+	<input type="radio" name="slide" class="radio-nav" id="nav-8"/>
+
+	<ul class="slide">
+		<li class="slide-1">
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k1.webp"/>
+			<div class="caption">Kamar Deluxe</div>
+		</li>
+		<li class="slide-2">
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k13.webp"/>
+			<div class="caption">Kamar Deluxe</div>
+		</li>
+		<li class="slide-3">
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k3.webp"/>
+			<div class="caption">Kamar Deluxe</div>
+		</li>
+                <li class="slide-4">
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k4.webp"/>
+			<div class="caption">Home Stay Petinggen</div>
+		</li>
+		<li class="slide-5">
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k7.web"/>
+			<div class="caption">Tempat Kongkow GH</div>
+		</li>
+		<li class="slide-6">
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s3.webp"/>
+			<div class="caption">Rental Motor</div>
+		</li>
+		<li class="slide-7">
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m8.webp"/>
+			<div class="caption">Rental Mobil</div>
+		</li>
+		<li class="slide-8">
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k6.webp"/>
+			<div class="caption">Bening Samirono</div>
+		</li>
+	</ul>
+
+	<div class="nav-arrow nav-next">
+		<label class="nav-1" for="nav-1">></label>
+		<label class="nav-2" for="nav-2">></label>
+		<label class="nav-3" for="nav-3">></label>
+		<label class="nav-4" for="nav-4">></label>
+		<label class="nav-5" for="nav-5">></label>
+		<label class="nav-6" for="nav-6">></label>
+		<label class="nav-7" for="nav-7">></label>
+		<label class="nav-8" for="nav-8">></label>
+	</div>
+	<div class="nav-arrow nav-prev">
+		<label class="nav-1" for="nav-1"><</label>
+		<label class="nav-2" for="nav-2"><</label>
+		<label class="nav-3" for="nav-3"><</label>
+                <label class="nav-4" for="nav-4">></label>
+		<label class="nav-5" for="nav-5">></label>
+		<label class="nav-6" for="nav-6">></label>
+		<label class="nav-7" for="nav-7">></label>
+		<label class="nav-8" for="nav-8">></label>
+	</div>
 </div>
-   <!-- Add Pagination -->
-    <div class="swiper-pagination"></div>
-  </div>
- <!-- Swiper JS -->
-
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
-  <!-- Initialize Swiper -->
-  <script>
-    var swiper = new Swiper('.swiper-container', {
-      spaceBetween: 60,
-      centeredSlides: true,
-      autoplay: {
-        delay: 4000,
-        disableOnInteraction: true,
-      },
-    });
-	</script>
 </body>
 </html>
-<div class="mapouter"><div class="gmap_canvas"><iframe width="640" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=325&amp;height=400&amp;hl=en&amp;q=BENING ABADI TRANSPORT&amp;t=&amp;z=18&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://embedgooglemap.xyz/"></a></div><style>.mapouter{position:relative;text-align:center;width:100%;height:400px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:400px;}</style></div><p align="center">Lokasi Bening Abadi Transport & Guest House</p>
+<div class="mapouter">
+<div class="gmap_canvas"><iframe width="640" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=325&amp;height=400&amp;hl=en&amp;q=BENING ABADI TRANSPORT&amp;t=&amp;z=18&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://embedgooglemap.xyz/"></a></div><style>.mapouter{position:relative;text-align:center;width:100%;height:400px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:400px;}</style></div><p align="center">Lokasi Bening Abadi Transport & Guest House</p>
 
   
 </article>
