--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ input[type=submit]:hover, .btn:hover { color: #fefefe; background-color: #73a9c9
 /*# sourceMappingURL=main.css.map */
  
 nav  {position:flex; width:100%; display:flex; justify-content:center; background:rgba(255,255,255,0.5);z-index:999}
-nav a {display:inline-block; text-decoration:none; padding:4px; color:#000; letter-spacing:1px; font-size:1em; text-shadow:1px 1px 1px #aaa} nav a.active {color:red} nav a:hover {color:#000}
+nav a {display:inline-block; text-decoration:none; padding:4px; color:#000; letter-spacing:1px; font-size:0.7em; text-shadow:1px 1px 1px #aaa} nav a.active {color:red} nav a:hover {color:#000}
 span.wave {
   animation-name: wave-animation;
   animation-duration: 2.5s;
@@ -1027,27 +1027,27 @@ ul.slide {
 
 	<ul class="slide">
 		<li class="slide-1">
-			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k1.webp"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k1.webp"/>
 			<div class="caption">Kamar Deluxe</div>
 		</li>
 		<li class="slide-2">
-			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k13.webp"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k13.webp"/>
 			<div class="caption">Kamar Deluxe</div>
 		</li>
 		<li class="slide-3">
-			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k3.webp"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k3.webp"/>
 			<div class="caption">Kamar Deluxe</div>
 		</li>
                 <li class="slide-4">
-			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k4.webp"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k4.webp"/>
 			<div class="caption">Home Stay Petinggen</div>
 		</li>
 		<li class="slide-5">
-			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k7.web"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k7.web"/>
 			<div class="caption">Tempat Kongkow GH</div>
 		</li>
 		<li class="slide-6">
-			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s3.webp"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s3.webp"/>
 			<div class="caption">Rental Motor</div>
 		</li>
 		<li class="slide-7">
@@ -1055,7 +1055,7 @@ ul.slide {
 			<div class="caption">Rental Mobil</div>
 		</li>
 		<li class="slide-8">
-			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k6.webp"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k6.webp"/>
 			<div class="caption">Bening Samirono</div>
 		</li>
 	</ul>
