--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ input[type=submit]:hover, .btn:hover { color: #fefefe; background-color: #73a9c9
 /*# sourceMappingURL=main.css.map */
  
 nav  {position:flex; width:100%; display:flex; justify-content:center; background:rgba(255,255,255,0.5);z-index:999}
-nav a {display:inline-block; text-decoration:none; padding:4px; color:#000; letter-spacing:1px; font-size:0.7em; text-shadow:1px 1px 1px #aaa} nav a.active {color:red} nav a:hover {color:#000}
+nav a {display:inline-block; text-decoration:none; padding:4px; color:#000; letter-spacing:1px; font-size:0.6em; text-shadow:1px 1px 1px #aaa} nav a.active {color:red} nav a:hover {color:#000}
 span.wave {
   animation-name: wave-animation;
   animation-duration: 2.5s;
@@ -999,10 +999,10 @@ ul.slide {
 	#nav-4:checked ~ .nav-next label.nav-5,
 	#nav-5:checked ~ .nav-prev label.nav-4,
 	#nav-5:checked ~ .nav-next label.nav-6,
-	#nav-6:checked ~ .nav-prev label.nav-7,
-	#nav-6:checked ~ .nav-next label.nav-5,
-	#nav-7:checked ~ .nav-prev label.nav-8,
-	#nav-7:checked ~ .nav-next label.nav-6,
+	#nav-6:checked ~ .nav-prev label.nav-5,
+	#nav-6:checked ~ .nav-next label.nav-7,
+	#nav-7:checked ~ .nav-prev label.nav-6,
+	#nav-7:checked ~ .nav-next label.nav-8,
 	#nav-8:checked ~ .nav-prev label.nav-7,
 	#nav-8:checked ~ .nav-next label.nav-1 {
 		z-index: 2;
@@ -1043,7 +1043,7 @@ ul.slide {
 			<div class="caption">Home Stay Petinggen</div>
 		</li>
 		<li class="slide-5">
-			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k7.web"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k7.webp"/>
 			<div class="caption">Tempat Kongkow GH</div>
 		</li>
 		<li class="slide-6">
@@ -1051,7 +1051,7 @@ ul.slide {
 			<div class="caption">Rental Motor</div>
 		</li>
 		<li class="slide-7">
-			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m8.webp"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m8.webp"/>
 			<div class="caption">Rental Mobil</div>
 		</li>
 		<li class="slide-8">
