--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ input[type=submit]:hover, .btn:hover { color: #fefefe; background-color: #73a9c9
 /*# sourceMappingURL=main.css.map */
  
 nav  {position:flex; width:100%; display:flex; justify-content:center; background:rgba(255,255,255,0.5);z-index:999}
-nav a {display:inline-block; text-decoration:none; padding:4px; color:#000; letter-spacing:1px; font-size:0.6em; text-shadow:1px 1px 1px #aaa} nav a.active {color:red} nav a:hover {color:#000}
+nav a {display:inline-block; text-decoration:none; padding:1px; color:#000; letter-spacing:1px; font-size:0.5em; text-shadow:1px 1px 1px #aaa} nav a.active {color:red} nav a:hover {color:#000}
 span.wave {
   animation-name: wave-animation;
   animation-duration: 2.5s;
@@ -1056,7 +1056,7 @@ ul.slide {
 		</li>
 		<li class="slide-8">
 			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k6.webp"/>
-			<div class="caption">Bening Samirono</div>
+			<div class="caption">Pintu Masuk Bening Samirono</div>
 		</li>
 	</ul>
 
