--- a/index.html
+++ b/index.html
@@ -1020,7 +1020,7 @@ ul.slide {
 	<input type="radio" name="slide" class="radio-nav" id="nav-2"/>
 	<input type="radio" name="slide" class="radio-nav" id="nav-3"/>
         <input type="radio" name="slide" class="radio-nav" id="nav-4"/>
-	<input type="radio" name="slide" class="radio-nav" id="nav-5"/>
+	<input type="radio" name="slide" class="radio-nav" id="nav-5" checked/>
 	<input type="radio" name="slide" class="radio-nav" id="nav-6"/>
 	<input type="radio" name="slide" class="radio-nav" id="nav-7"/>
 	<input type="radio" name="slide" class="radio-nav" id="nav-8"/>
