--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -365,7 +365,7 @@ input[type=submit]:hover, .btn:hover { color: #fefefe; background-color: #73a9c9
 /*# sourceMappingURL=main.css.map */
  
 nav  {position:flex; width:100%; display:flex; justify-content:center; background:rgba(255,255,255,0.5);z-index:999}
-nav a {display:inline-block; text-decoration:none; padding:3px; color:#444; letter-spacing:1px; font-size:0.5em; text-shadow:1px 1px 1px #aaa} nav a.active {color:red} nav a:hover {color:#000}
+nav a {display:inline-block; text-decoration:none; padding:3px; color:#444; letter-spacing:1px; font-size:0.6em; text-shadow:1px 1px 1px #aaa} nav a.active {color:red} nav a:hover {color:#000}
 span.wave {
   animation-name: wave-animation;
   animation-duration: 2.5s;
@@ -759,20 +759,20 @@ ul.slide {
 
 	<ul class="slide">
 		<li class="slide-1">
-			<img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k1.jpg"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k1.webp"/>
 			<div class="caption">Kamar Deluxe</div>
 		</li>
 		<li class="slide-2">
-			<img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k13.jpg"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k13.webp"/>
 			<div class="caption">Kamar Deluxe</div>
 		</li>
 		<li class="slide-3">
-			<img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k3.jpg"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k3.webp"/>
 			<div class="caption">Kamar Deluxe</div>
 		</li>
                 <li class="slide-4">
-			<img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k4.jpg"/>
-			<div class="caption">Guest House</div>
+			<img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k4.webp"/>
+			<div class="caption">Homestay</div>
 		</li>
 	</ul>
 
